<resources>
    <string name="app_name">app</string>

    <string name="nombre_app">MiApp</string>
    <string name="login_titulo">Bienvenido</string>
    <string name="login_subtitulo">Inicia sesión para continuar</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="btn_login">Ingresar</string>
    <string name="olviste_pass">¿Olvidaste tu contraseña?</string>
    <string name="no_cuenta">¿No tienes cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tomar_foto">Tomar foto</string>
    <string name="men_principal">Menú Principal</string>
    <string name="bienvenido">Bienvenido:</string>
    <string name="ir_a_perfil_resultado">Ir a Perfil (resultado)</string>
    <string name="abrir_sitio_web">Abrir sitio web</string>
    <string name="enviar_correo">Enviar correo</string>
    <string name="compartir_texto">Compartir texto</string>
    <string name="linterna_on_off">Linterna ON/OFF</string>
    <string name="abrir_c_mara">Abrir Cámara</string>
    <string name="preguntas_frecuentes">Preguntas frecuentes</string>
    <string name="enviar_un_correo">enviar un correo</string>
    <string name="consultas_por_correo">consultas por correo</string>
    <string name="c_mo_usar_los_mapas">📍 ¿Cómo usar los mapas?</string>
    <string name="c_mo_tomar_fotos">📸 ¿Cómo tomar fotos?</string>
    <string name="usa_el_bot_n_tomar_foto">- Usa el botón \'Tomar Foto\'</string>
    <string name="haz_clic_en_el_bot_n_ver_mapa">- Haz clic en el botón \'Ver Mapa\'</string>
    <string name="c_mo_enviar_correos">✉️ ¿Cómo enviar correos?</string>
    <string name="usa_el_bot_n_enviar_correo">- Usa el botón \'Enviar Correo\'</string>
    <string name="c_mo_agregar_eventos">📅 ¿Cómo agregar eventos?</string>
    <string name="usa_el_bot_n_agregar_evento">- Usa el botón \'Agregar Evento\'</string>
    <string name="game_team_sport">Game Team Sport</string>
    <string name="mapa">Mapa</string>
    <string name="fotos">Fotos</string>
    <string name="faq_ayuda">FAQ / Ayuda</string>
</resources>